--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -32,7 +32,10 @@
             </ul>
         </nav>
         
-        <a href="#" class="buscarUno"><img src="../assets/img/search.png" alt="Buscar" ></a>
+        <a class="usuario" href="./login.html">
+            <img src="../assets/ico/usuario.webp" alt="usuario">
+            <span>Ingresá o registrate </span>
+        </a>
 
    <div class="menuDesplegable">
 
@@ -246,7 +249,7 @@
       </div>
 
 
-
+      <script src="../js/main.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     
