--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -103,60 +103,7 @@
            
         </div>
 
-        <div class="integrantes">
-
-            <div class="cajasIntegrantes">
-             <div class="integrantesFotos">
-                <img src="../assets/img/nosotros/ricky.webp" alt="Ricardo Heredia - Diseñador Multimedial">
-             </div>
-                <h4>Ricardo Heredia</h4>
-                <h6>Diseñador 3D y Programador Web</h6>
-                <p>Excelente habilidad para fusionar diseño y funcionabilidad. Su dedicación y ética de trabajo son ejemplares, lo que le permite afrontar cada proyecto con un enfoque meticuloso y un profundo amor por el detalle. Seriedad y compromiso, siempre dispuesto a apoyar a sus compañeros y a mantener al equipo alineado y en marcha hacia los objetivos comunes. </p>
-                <div class="cajaRedes">
-                    <a href="https://www.instagram.com" target="blank"><img src="../assets/img/instagram.webp" alt="Instagram Ricardo"></a>
-                    <a href="https://www.linkedin.com" target="blank"><img src="../assets/img/linkedin.webp" alt="Likedin Ricardo"></a>
-                </div>
-            </div>
-
-            <div class="cajasIntegrantes">
-                <div class="integrantesFotos">
-                    <img src="../assets/img/nosotros/nico.webp" alt="Ricardo Heredia - Diseñador Multimedial">
-                 </div>
-                <h4>Nicolas Gentile</h4>
-                <h6>Experto en VFX y Motion Graphics</h6>
-                <p>Es el genio detrás de los efectos visuales impresionantes y las animaciones dinámicas. Su creatividad es inagotable, y su capacidad para transformar ideas en movimiento es asombrosa. Siempre eficiente, Nicolás maneja la complejidad de los proyectos con una facilidad que deja a todos asombrados, entregando resultados visuales que cautivan.</p>
-                <div class="cajaRedes">
-                    <a href="https://www.instagram.com" target="blank"><img src="../assets/img/instagram.webp" alt="Instagram Nico"></a>
-                    <a href="https://www.linkedin.com" target="blank"><img src="../assets/img/linkedin.webp" alt="Likedin Nico"></a>
-                </div>
-            </div>
-
-            <div class="cajasIntegrantes">
-                <div class="integrantesFotos">
-                    <img src="../assets/img/nosotros/mati.webp" alt="Ricardo Heredia - Diseñador Multimedial">
-                 </div>
-                <h4>Matías Frare</h4>
-                <h6>Diseñador 3D y experto en VFX</h6>
-                <p>Su aporte es una mezcla de habilidad técnica y simplicidad en su enfoque, lo que lo convierte en un maestro en la creación de arte 3D y efectos visuales. Su manejo preciso de las herramientas y su capacidad para simplificar procesos complejos permiten que cada proyecto fluya sin contratiempos, siempre con un toque de elegancia y profesionalismo.</p>
-                <div class="cajaRedes">
-                    <a href="https://www.instagram.com" target="blank"><img src="../assets/img/instagram.webp" alt="Instagram Matias"></a>
-                    <a href="https://www.linkedin.com" target="blank"><img src="../assets/img/linkedin.webp" alt="Likedin Matias"></a>
-                </div>
-            </div>
-
-            <div class="cajasIntegrantes">
-                <div class="integrantesFotos">
-                    <img src="../assets/img/nosotros/renzo.webp" alt="Ricardo Heredia - Diseñador Multimedial">
-                 </div>
-                <h4>Renzo Paolino</h4>
-                <h6>Diseñador 3D</h6>
-                <p>El perfeccionista del equipo, conocido por su atención al detalle y su compromiso con la excelencia. Su espíritu libre se refleja en su trabajo, donde cada modelo 3D es una obra maestra. Renzo no se conforma con lo ordinario; busca siempre superar los límites y entregar resultados que destacan por su precisión y calidad estética.</p>
-                <div class="cajaRedes">
-                    <a href="https://www.instagram.com" target="blank"><img src="../assets/img/instagram.webp" alt="Instagram Renzo"></a>
-                    <a href="https://www.linkedin.com" target="blank"><img src="../assets/img/linkedin.webp" alt="Likedin Renzo"></a>
-                </div>
-            </div>
-
+        <div class="integrantes" id="integrantes">
         </div>
 
        </section>
@@ -249,7 +196,7 @@
       </div>
 
 
-      <script src="../js/main.js"></script>
+      <script src="../js/nosotros.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     
