--- a/pages/registro.html
+++ b/pages/registro.html
@@ -15,7 +15,7 @@
     <title>Usuario</title>
     <link rel="shortcut icon" href="../assets/ico/logo-ico.ico">
 </head>
-<body>
+<body data-pagina="registro">
 
     <header id="header">
 
@@ -86,7 +86,7 @@
        
         <section class="loginSection">
 
-          <div class="iniciarSesionSeccion">           
+          <div class="iniciarSesionSeccion" id="registroSeccion">           
 
             <h3>Completa los datos</h3>
 
@@ -203,6 +203,7 @@
     
 
      <script src="../js/main.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
