--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         
-        <a class="usuario" href="./pages/login.html">
+        <a class="usuario" href="./pages/login.html" id="usuarioNav">
             <img src="./assets/ico/usuario.webp" alt="usuario">
             <span>Ingresá o registrate </span>
         </a>
