Correciones y buena identación de código

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
             <h2>PORTFOLIO</h2>
 
-            <div id="portfolioContainer"></div>
+            <div id="portfolioContainerIndex"></div>
 <!-- 
             <div class="imagenesPortfolio">
                 
