--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,10 +24,10 @@
     
         <nav class="barraGrande">
             <ul class="navBar">
-                <li class="barra"><a href="../index.html">INICIO</a></li>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
-                <li><a href="./nosotros.html">NOSOTROS</a></li>
+                <li><a href="./merch.html">MERCH</a></li>
+                <li class="barra"><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
@@ -50,7 +50,7 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
                 <li><a href="./nosotros.html" class="barra">NOSOTROS</a></li>
-                <li><a href="./portfolio.html">PORTFOLIO</a></li>
+                <li><a href="./merch.html">MERCH</a></li>
                 <li><a href="./servicios.html">SERVICIOS</a></li>
                 <li><a href="./login.html">CUENTA</a></li>
             </ul>
