--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="navBar">
                 <li class="barra"><a href="./index.html">INICIO</a></li>
                 <li><a href="./pages/portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./pages/servicios.html">SERVICIOS</a></li>
+                <li><a href="./pages/merch.html">MERCH</a></li>
                 <li><a href="./pages/nosotros.html">NOSOTROS</a></li>
                 <li><a href="./pages/contacto.html">CONTACTO</a></li>
             </ul>
