--- a/pages/merch.html
+++ b/pages/merch.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">  
 
-    <title>Merchandising</title>
+    <title>Merch</title>
     <link rel="shortcut icon" href="../assets/ico/logo-ico.ico">
 
 </head>
@@ -27,9 +27,9 @@
     
         <nav class="barraGrande">
             <ul class="navBar">
-                <li class="barra"><a href="../index.html">INICIO</a></li>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
+                <li class="barra"><a href="./merch.html">MERCH</a></li>
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
             </ul>
@@ -53,8 +53,8 @@
                 <li><a href="../index.html">INICIO</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
-                <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./servicios.html" class="barra">SERVICIOS</a></li>
+                <li><a href="./merch.html">MERCH</a></li>
+                <li><a href="./merch.html" class="barra">MERCH</a></li>
                 <li><a href="./login.html">CUENTA</a></li>
             </ul>
         </nav>
@@ -76,41 +76,42 @@
 
     <section class="merchSection" id="merchProducts">
 
-        <div class="productBoxes">
-            <div class="product">
-                <img src="../assets/img/portfolio/cinco.png" alt="">
-                <div class="descriptionBox">
-                    <span>Producto</span><br>
-                    <span class="precioMerch">$5.000</span>
-                    <form action="" class="formProduct">
-                        <input type="hidden" name="add-to-cart">
-                        <input type="submit" value="Agregar al carrito">
-                    </form>
-                </div>
-            </div>            
-            <div class="product">
-                <img src="../assets/img/portfolio/cinco.png" alt="">
-                <div class="descriptionBox">
-                    <span>Producto</span><br>
-                    <span class="precioMerch">$5.000</span>
-                    <form action="" class="formProduct">
-                        <input type="hidden" name="add-to-cart">
-                        <input type="submit" value="Agregar al carrito">
-                    </form>
-                </div>
-            </div>            
-            <div class="product">
-                <img src="../assets/img/portfolio/cinco.png" alt="">
-                <div class="descriptionBox">
-                    <span>Producto</span><br>
-                    <span class="precioMerch">$5.000</span>
-                    <form action="" class="formProduct">
-                        <input type="hidden" name="add-to-cart">
-                        <input type="submit" value="Agregar al carrito">
-                    </form>
-                </div>
-            </div>            
+        <div id="productBoxes">
         </div>    
+
+        <div id="modal-cart" class="cart-none">
+
+              <div class="nav-modal">
+                <a href="#"><img src="../assets/img/salir.png" alt="salir"></a>
+                <h>Carrito de Compras</h>
+                <div>
+                    <img src="../assets/img/carrito.webp" alt="carrito">
+                    <div id="items-cant"></div>
+                </div>
+              </div>
+
+              <div id="added-products">
+                   <!-- CAJA DE ITEMS SELECCIONADOS
+                     <div id="added-item-box">
+                       <div class="img-item-cart">
+                        <img src="../assets/img/portfolio/tres.png" alt="product">
+                       </div>
+                       <div class="item-cart">
+                           <p>Vasos de Café</p>
+                           <span>$848.90</span>
+                       </div>
+                       <div class="item-cant">
+                        <input type="button" id="btnRestar" value="-">
+                        <span id="cantidad-items">1</span>
+                        <input type="button" id="btnSumar" value="+">
+                       </div>                          
+                   </div>-->
+              </div>
+              <div class="footer-modal">
+                    <button id="vaciarCarrito">Vaciar carrito</button>
+                    <button id="comprar">Comprar</button>
+              </div>
+        </div>
 
     </section>
 </main>
@@ -211,9 +212,9 @@
 
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="../js/merch.js"></script>
   <script src="../js/nav-menu.js"></script>
-  <script src="../js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
