--- a/pages/registro.html
+++ b/pages/registro.html
@@ -24,9 +24,9 @@
     
         <nav class="barraGrande">
             <ul class="navBar">
-                <li class="barra"><a href="../index.html">INICIO</a></li>
+                <li><a href="../index.html">INICIO</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
+                <li><a href="./merch.html">MERCH</a></li>
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./contacto.html">CONTACTO</a></li>
             </ul>
@@ -51,7 +51,7 @@
                 <li><a href="./contacto.html">CONTACTO</a></li>
                 <li><a href="./nosotros.html">NOSOTROS</a></li>
                 <li><a href="./portfolio.html">PORTFOLIO</a></li>
-                <li><a href="./servicios.html">SERVICIOS</a></li>
+                <li><a href="./merch.html">MERCH</a></li>
                 <li><a href="./login.html" class="barra">CUENTA</a></li>
             </ul>
         </nav>
