--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="flexAgencia">
 
             <div class="flexCajaUno">
-                <p>que se destaca utilizando la <span>innovacion </span>la <span>teconología </span>y el <span>ruido</span> como principales herramientas</p>
+                <p>que se destaca utilizando la <span>innovacion </span>la <span>tecnología </span>y el <span>ruido</span> como principales herramientas</p>
             </div>
 
             <div class="video">
